// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders SliderField with labels correctly 1`] = `
<div
  className="sliderField"
>
  <p
    className="sc-hKgILt dMHJLh"
  >
    New slider with labels
  </p>
  <div
    className="sliderWrapper"
  >
    <div
      className="sc-dwfUOf cpbypg"
      max={3}
      min={0}
      value={2}
    >
      <input
        aria-labelledby="New slider with labels"
        className="sc-GqfZa cRyNNW"
        id="New slider with labels-thumb"
        max={3}
        min={0}
        onChange={[Function]}
        onKeyUp={[Function]}
        onMouseUp={[Function]}
        step={1}
        type="range"
        value={2}
      />
      <output
        className="sc-fbkhIv kzdZEg"
        htmlFor="New slider with labels-thumb"
        value={2}
      >
        C
      </output>
      <div
        className="sc-TmcTc sc-jHVexB jkwUgb bBYyAO"
      />
      <span
        className="sc-clsHhM bUcShG"
      >
        A
      </span>
      <span
        className="sc-clsHhM bUcShG"
      >
        D
      </span>
    </div>
  </div>
</div>
`;

exports[`renders SliderField with numeric values correctly  1`] = `
<div
  className="sliderField"
>
  <p
    className="sc-hKgILt dMHJLh"
  >
    New slider
  </p>
  <div
    className="sliderWrapper"
  >
    <div
      className="sc-dwfUOf gDbUcV"
      max={5}
      min={0}
      value={1}
    >
      <input
        aria-labelledby="New slider"
        className="sc-GqfZa cRyNNW"
        id="New slider-thumb"
        max={5}
        min={0}
        onChange={[Function]}
        onKeyUp={[Function]}
        onMouseUp={[Function]}
        step={1}
        type="range"
        value={1}
      />
      <output
        className="sc-fbkhIv ibYZJH"
        htmlFor="New slider-thumb"
        value={1}
      >
        1
      </output>
      <div
        className="sc-TmcTc sc-jHVexB jkwUgb bBYyAO"
      />
      <span
        className="sc-clsHhM bUcShG"
      >
        0
      </span>
      <span
        className="sc-clsHhM bUcShG"
      >
        5
      </span>
    </div>
  </div>
</div>
`;
